<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Sequence_build</class>
 <widget class="QWidget" name="Sequence_build">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>557</width>
    <height>709</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Sequence - FILE</string>
  </property>
  <layout class="QGridLayout" name="gridLayout" rowstretch="3,0,0,0,0,0" columnstretch="0,0,0,0,0,0,0,0,0">
   <item row="2" column="8">
    <widget class="QPushButton" name="pushClear">
     <property name="text">
      <string>Clear Sequence</string>
     </property>
    </widget>
   </item>
   <item row="3" column="8">
    <widget class="QPushButton" name="pushSaving">
     <property name="mouseTracking">
      <bool>false</bool>
     </property>
     <property name="text">
      <string>Save serialised</string>
     </property>
    </widget>
   </item>
   <item row="0" column="7" rowspan="2">
    <widget class="Line" name="line_3">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
   </item>
   <item row="0" column="0" colspan="7">
    <widget class="QListView" name="listSequence">
     <property name="acceptDrops">
      <bool>false</bool>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
     </property>
     <property name="dragEnabled">
      <bool>false</bool>
     </property>
     <property name="dragDropOverwriteMode">
      <bool>false</bool>
     </property>
     <property name="dragDropMode">
      <enum>QAbstractItemView::DragDrop</enum>
     </property>
     <property name="defaultDropAction">
      <enum>Qt::MoveAction</enum>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::ExtendedSelection</enum>
     </property>
     <property name="textElideMode">
      <enum>Qt::ElideRight</enum>
     </property>
    </widget>
   </item>
   <item row="0" column="8">
    <widget class="QTreeWidget" name="treeOptions">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="maximumSize">
      <size>
       <width>100</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="dragEnabled">
      <bool>true</bool>
     </property>
     <property name="dragDropMode">
      <enum>QAbstractItemView::DragOnly</enum>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
     </property>
     <column>
      <property name="text">
       <string>1</string>
      </property>
     </column>
     <item>
      <property name="text">
       <string>Individual setpoints</string>
      </property>
      <property name="flags">
       <set>ItemIsUserCheckable|ItemIsEnabled|ItemIsTristate</set>
      </property>
      <item>
       <property name="text">
        <string>Set Temperature</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable</set>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Set Field</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable</set>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Wait</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable|ItemIsEnabled</set>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Shutdown Temperature Control</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsUserCheckable</set>
       </property>
      </item>
     </item>
     <item>
      <property name="text">
       <string>Measurements</string>
      </property>
      <property name="flags">
       <set>ItemIsUserCheckable|ItemIsEnabled|ItemIsTristate</set>
      </property>
      <item>
       <property name="text">
        <string>Resistivity vs Temperature</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable|ItemIsEnabled</set>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Resistivity vs Field</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable</set>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Hall-resistivity vs Temperature</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable</set>
       </property>
      </item>
     </item>
     <item>
      <property name="text">
       <string>Miscellaneous</string>
      </property>
      <property name="flags">
       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled|ItemIsTristate</set>
      </property>
      <item>
       <property name="text">
        <string>Change Data File</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable|ItemIsUserCheckable</set>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Chain Sequence</string>
       </property>
       <property name="flags">
        <set>ItemIsSelectable|ItemIsUserCheckable|ItemIsEnabled</set>
       </property>
      </item>
     </item>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="Line" name="line">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
   </item>
   <item row="1" column="4">
    <widget class="Line" name="line_2">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QPushButton" name="pushBrowse">
     <property name="text">
      <string>Choose Filelocation for serialisation</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QPushButton" name="pushOpen">
     <property name="text">
      <string>Open Sequence File</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1" colspan="6">
    <widget class="QLineEdit" name="lineFileLocation_serialised"/>
   </item>
   <item row="2" column="1" colspan="6">
    <widget class="QLineEdit" name="lineFileLocation"/>
   </item>
   <item row="4" column="0" colspan="9">
    <widget class="QPushButton" name="Button_RunSequence">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="text">
      <string>RUN Sequence</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0" colspan="9">
    <widget class="QPushButton" name="Button_AbortSequence">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="text">
      <string>ABORT Sequence</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
